--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-    <title>React App</title>
+    <title>Control de Gastos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
