--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ED9B33" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="App para controlar tus gastos"
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
